force-app/main/default/objects/AppLocker__c/AppLocker__c.object-meta.xml
<CustomObject>
    <description>application locker</description>
    <label>AppLocker</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AppLocker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppLockers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>