force-app/main/default/objects/AppLocker__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <externalId>true</externalId>
    <label>Object ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>