force-app/main/default/objects/AppLocker__c/fields/RequestorId__c.field-meta.xml
<CustomField>
    <fullName>RequestorId__c</fullName>
    <label>Requestor</label>
    <length>55</length>
    <type>Text</type>
</CustomField>