force-app/main/default/objects/AppLocker__c/fields/token__c.field-meta.xml
<CustomField>
    <fullName>token__c</fullName>
    <label>request token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>